<resources>
    <string name="app_name">IOT Weather Station</string>
    <string name="tempTxtV">Temperature </string>
    <string name="humiTxtV">Humidity </string>
    <string name="lightTxtV">Ambient light </string>
    <string name="syncBtn">Sync Now</string>
    <string name="tempValue">-- </string>
    <string name="tempUnitValue">&#x2103;</string>
    <string name="tempFarUnitValue">&#x2109;</string>
    <string name="humValue">-- </string>
    <string name="humUnitValue">% RH</string>
    <string name="lightValue">-- </string>
    <string name="lightUnitValue">%</string>
    <string name="settings">settings</string>
    <string name="about">About</string>

    <!-- About Activity -->
    <string name="title_activity_about">About</string>
    <string name="geoEmail">geo.emm@hotmail.com</string>
    <string name="kozoEmail">g.kozompolis@gmail.com</string>
    <string name="master_degree_m_sc_in_advanced_information_systems">Master Degree (M.Sc.) in Advanced Information Systems</string>
    <string name="direction_advanced_software_development_technologies">Direction: Advanced Software Development Technologies</string>
    <string name="course_software_development_for_mobile_devices">Course: Software Development for Mobile Devices</string>
    <string name="george_emmanouil_mpsp15025">George Emmanouil MPSP15025</string>
    <string name="john_kozompolis_mpsp15036">John Kozompolis MPSP15036</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="saveSettings">Save</string>
    <string name="showinfarenheit">Temperature in Fahrenheit</string>
    <string name="sync_sec">Sync period(s)</string>
    <string name="sync">Sync period (s)</string>

    <string-array name="unit_array">
        <item>&#x2103;</item>
        <item>&#x2109;</item>
    </string-array>

    <string-array name="sync_seconds_array">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
</resources>
