<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mpsp.unipi.iotweatherstation.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/settings_toolbar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="46dp"
            android:paddingBottom="16dp"
            android:id="@+id/temperatureLayout">

            <TextView
                android:text="@string/showinfarenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUnit"
                android:layout_gravity="center"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/unitSpinner"
                android:layout_margin="16dp"
                android:entries="@array/unit_array"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sync_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temperatureLayout"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="46dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewGetData"
                android:text="@string/sync"
                android:layout_gravity="center"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/secondsSpinner"
                android:layout_margin="16dp"
                android:entries="@array/sync_seconds_array"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveSettings"
            android:layout_below="@+id/sync_layout"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"/>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
